stateDiagram-v2
    [*] --> Pending
    Pending --> Approved: "Moderator duyệt (Moderator approves)"
    Pending --> Rejected: "Moderator từ chối (Moderator rejects)"
    Pending --> Hidden: "Bị ẩn theo moderation policy"
    Approved --> Hidden: "Ẩn về sau sau report hoặc decision"
    Hidden --> Approved: "Khôi phục nếu admin quyết định"
    Rejected --> [*]
    Approved --> [*]

    note right of Pending
      approvalStatus là summary state trên guestbook entry.
      Nếu có report lifecycle riêng, source of truth (nguồn dữ liệu gốc) vẫn ở moderationReports.
    end note
